# sparp

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  sparp.py  test.py
.github/workflows/: release.yml
examples/: basic_example.py  callbacks.py  custom_parser.py  input_generator.py  retry_exhaustion.py  stop_conditions.py  timeouts.py
mymodule/: __init__.py
src/: __init__.py  sparp.py
src/logic/: __init__.py  sparp.py
src/old/: __init__.py  test.py
src/sparp/: __init__.py  sparp.py
src/sparp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sparp_code/: __init__.py  sparp.py
tests/unit/: conftest.py  helpers.py  test_callbacks.py  test_core.py  test_custom_parser.py  test_exceptions.py  test_progress_and_stats.py  test_stop_conditions.py
